--- a/layouts/partials/hooks/body-end/custom.html
+++ b/layouts/partials/hooks/body-end/custom.html
@@ -1,6 +1,1 @@
-<style>
-    /* 隐藏 MapMyVisitors 产生的可见元素 */
-    #mapmyvisitors, .mapmyvisitors-widget, .mmv-container { display: none !important; }
-  </style>
-  
-  <script type="text/javascript" id="mapmyvisitors" src="//mapmyvisitors.com/map.js?d=GIGVYtMFETiplLXRv1J3KrX-flUxOvIow62-A39cMqQ&cl=ffffff&w=a"></script>
+<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "3ee5028de414454bac8fa3aae5b7c1b7"}'></script><!-- End Cloudflare Web Analytics -->
