fix the mapvsitor

--- a/layouts/_partials/hooks/body-end/custom.html
+++ b/layouts/_partials/hooks/body-end/custom.html
@@ -1,1 +1,6 @@
-<!-- Custom scripts can be added here -->
+<!-- Hide MapMyVisitors widget globally -->
+<style>
+  #mapmyvisitors, .mapmyvisitors-widget, .mmv-container { display: none !important; }
+</style>
+<script id="mapmyvisitors" type="text/javascript"
+        src="//mapmyvisitors.com/map.js?d=GIGVYtMFETiplLXRv1J3KrX-flUxOvIow62-A39cMqQ&cl=ffffff&w=a"></script>
