--- a/layouts/_partials/hooks/body-end/custom.html
+++ b/layouts/_partials/hooks/body-end/custom.html
@@ -1,1 +1,6 @@
-<!-- Custom scripts can be added here -->
+<!-- MapMyVisitors tracking image (hidden) -->
+<div style="display: none;">
+  <a href='https://mapmyvisitors.com/web/1c00q' title='Visit tracker'>
+    <img src='https://mapmyvisitors.com/map.png?cl=080808&w=a&t=n&d=GIGVYtMFETiplLXRv1J3KrX-flUxOvIow62-A39cMqQ&co=ffffff&ct=808080' alt='Visit tracker'/>
+  </a>
+</div>
